# history-peel-tool

./: .env.local  .gitignore  CR_M2_workspace.html  README.md  ROADMAP.md  VERSION.md  demo_history.py  export_to_pdf.py  gen_data.py  generate_meta_pack.py  index.html  make_production.py  package-lock.json  package.json  pyproject.toml  run.sh  run_sync.py  server.js  test_reader.py  vercel.json  visual_audit_v3.js
.vercel/: project.json
ai/prompts/: ai_prompts_v1.md
api/: explain.js  review.js
api/prompts/: alevel_prompt.txt  ib_prompt.txt  ielts_prompt.txt  review_system_prompt.txt  toefl_prompt.txt
assets/css/: workspace.css
assets/js/: workspace.js
assets/missions/: CR_M1_workspace.html  CR_M2_workspace.html  CR_M3_workspace.html  CR_M4_workspace.html  CR_M5_workspace.html  IELTS_T1_workspace.html  IELTS_T2_workspace.html  IELTS_T3_workspace.html  IELTS_T4_workspace.html  workspace_template.html  {mid}_workspace.html
core/: fix_workspaces.py  generate_index.py  generate_interactive_mission.py  mission_data.py  mission_manager.py  mission_template.html
data/: missions.json  review_schema.json
docs/guides/: student_manual_v1.md
docs/snapshots/: 2026-01-25_refactor.md
frontend/: app.js  index.html
geekgirl_visual/cli/: main.py
geekgirl_visual/generator/: generate_link_pack.py  generate_meta_print_sheet.py  generate_peel_boards.py  sticker_generator.py  (+3 more)
knowledge_base/: civil_rights.json  civil_rights_mvp.json  package.json
legacy_mission_system/: README.md  generate_interactive_mission.py  generate_interactive_mission_v1.py
src/: configs.js
(+21 files in other folders)
